// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Error from cameraSource shows not supported 1`] = `
<div
  class="notch-inset-item"
>
  <section
    class="section"
  >
    <div
      class="container is-fluid"
    >
      <h1
        class="title has-text-white"
      >
        Camera is NOT supported!
      </h1>
      <div>
        Error
        :
         
        This is a test error message
      </div>
    </div>
  </section>
</div>
`;

exports[`Object from cameraSource shows supported and video 1`] = `
<div
  class="notch-inset-item"
>
  <section
    class="section"
  >
    <div
      class="container is-fluid"
    >
      <h1
        class="title has-text-white"
      >
        Camera is supported!
      </h1>
      <div>
        <div>
          Video Below?
        </div>
        <video
          autoplay=""
          id="video-chat"
          playsinline=""
        />
      </div>
    </div>
  </section>
</div>
`;

exports[`Object from cameraSource shows supported and video with fallback video source 1`] = `
<div
  class="notch-inset-item"
>
  <section
    class="section"
  >
    <div
      class="container is-fluid"
    >
      <h1
        class="title has-text-white"
      >
        Camera is supported!
      </h1>
      <div>
        <div>
          Video Below?
        </div>
        <video
          autoplay=""
          id="video-chat"
          playsinline=""
        />
      </div>
    </div>
  </section>
</div>
`;

exports[`matches snapshot 1`] = `
<div
  class="notch-inset-item"
>
  <section
    class="section"
  >
    <div
      class="container is-fluid"
    >
      <h1
        class="title has-text-white"
      >
        Camera is supported!
      </h1>
      <div>
        <div>
          Video Below?
        </div>
        <video
          autoplay=""
          id="video-chat"
          playsinline=""
        />
      </div>
    </div>
  </section>
</div>
`;
